--- a/frontend/src/Components/style.css
+++ b/frontend/src/Components/style.css
@@ -280,3 +280,19 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.approved-icon {
+  width: 30vw;
+  height: 42vh;
+  padding: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media (width <= 860px) {
+  .approved-icon {
+    width: 46vw;
+    height: 25vh;
+    padding: 5%;
+  }
+}
