--- a/frontend/src/Components/style.css
+++ b/frontend/src/Components/style.css
@@ -80,6 +80,18 @@ html {
   margin: 15px 0 0;
   text-transform: uppercase;
 }
+.loader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 1000;
+}
 
 .card-title {
   font-family: "Cormorant Garamond", serif;
@@ -276,10 +288,6 @@ body {
   height: 100%;
   object-fit: cover;
 }
-.image {
-  width: 100%;
-  height: 100%;
-}
 
 .approved-icon {
   width: 30vw;
@@ -294,5 +302,49 @@ body {
     width: 46vw;
     height: 25vh;
     padding: 5%;
+  }
+}
+/* .bg-image {
+  /* The image used */
+/* background-image: url("https://i.postimg.cc/sDdm0rp4/zwigato.png"); */
+
+/* Add the blur effect */
+/* filter: blur(8px); */
+/* -webkit-filter: blur(8px); */
+
+/* Full height */
+/* height: 100%; */
+
+/* Center and scale the image nicely */
+/* background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
+/* }  */
+.mySwiper {
+  width: 100%;
+  height: 500px;
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media (max-width: 768px) {
+  .btn-group__item {
+    padding: 8px 16px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 480px) {
+  .btn-group__item {
+    padding: 6px 12px;
+    font-size: 12px;
+  }
+  .logo {
+    height: 3em;
+    padding: 0;
   }
 }
